tests/sema/fail/v37_fail_hex_i64_literal_range.ep
# COMPILE_FAIL: out of range for i64

fun run(): i64 {
    ret 0x8000000000000000
}

fun main(): void {
    exit(run())
}
